k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-verba
  name: backend-service
spec:
  selector:
    app: mongo-verba
    tier: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-verba
  name: frontend-service
spec:
  selector:
    app: mongo-verba
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-verba
  name: mongodb-service
spec:
  selector:
    app: mongo-verba
    tier: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
